# cookiecutter-sveetch-python

./: CHANGES.rst  Makefile  README.rst  cookiecutter.json
hooks/: post_gen_project.py
requirements/: base.txt
{{cookiecutter.package_name}}/: CHANGELOG.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  setup.cfg  sphinx_reload.py
{{cookiecutter.package_name}}/docs/: cli.rst  conf.py  development.rst  history.rst  index.rst  install.rst  requirements.txt  sphinx_reload.py
{{cookiecutter.package_name}}/docs/core/: exceptions.rst  hello.rst  logger.rst
{{cookiecutter.package_name}}/docs/references/: exceptions.rst  hello.rst  index.rst  logger.rst
{{cookiecutter.package_name}}/tests/: conftest.py
{{cookiecutter.package_name}}/tests/001_hello/: 001_hello_base.py  02_hello_html.py
{{cookiecutter.package_name}}/tests/01_hello/: 01_base.py  02_html.py
{{cookiecutter.package_name}}/tests/100_cli/: 001_cli_version.py  010_greet.py
{{cookiecutter.package_name}}/{{cookiecutter.app_name}}/: __init__.py  hello.py  logger.py
{{cookiecutter.package_name}}/{{cookiecutter.app_name}}/cli/: entrypoint.py  greet.py  version.py
