;;
;; {{ cookiecutter.project_name }} package
;;
[metadata]
name = {{ cookiecutter.package_name }}
version = {{ cookiecutter.version }}
description = {{ cookiecutter.project_short_description }}
long_description = file:README.rst
long_description_content_type = text/x-rst
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
url = https://github.com/{{ cookiecutter.author_username }}/{{ cookiecutter.package_name }}
project_urls =
    Source Code = https://github.com/{{ cookiecutter.author_username }}/{{ cookiecutter.package_name }}
    Issue Tracker = https://github.com/{{ cookiecutter.author_username }}/{{ cookiecutter.package_name }}/issues
    Changelog = https://{{ cookiecutter.package_name }}.readthedocs.io/en/latest/history.html
    Documentation = https://{{ cookiecutter.package_name }}.readthedocs.io/
license = MIT
keywords = Python
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.10
include_package_data = True
install_requires =
    {% if cookiecutter.include_cli -%}click>=8.0
    {% endif %}colorlog
packages = find:
zip_safe = True

[options.extras_require]
dev =
    pytest>=7.0.0
quality =
    flake8>=6.0.0
    tox>=4.11.0
doc =
    sphinx>=8.0.2
    furo>=2024.8.6
    sphinx-copybutton>=0.5.2
doc-live =
    livereload>=2.6.0
release =
    twine>=5.0.0

[options.packages.find]
where = .
exclude=
    dist
    data
    docs
    tests

{% if cookiecutter.include_cli -%}[options.entry_points]
console_scripts =
    {{ cookiecutter.app_name }} = {{ cookiecutter.app_name }}.cli.entrypoint:cli_frontend
{% endif %}
[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__

[tool:pytest]
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist =  py{310,311}

[testenv]

commands =
    pip install -e .[dev]
    pytest -vv tests
